# infigraph

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  install.ps1  install.sh  release.sh
.cargo/: config.toml
.cargo-husky/hooks/: pre-commit
.cursor/rules/: analysis-subsystems.mdc  code-indexing-pipeline.mdc  (+2 more)
crates/infigraph-cli/: Cargo.toml
crates/infigraph-cli/src/: analysis_commands.rs  git_commands.rs  graph_commands.rs  group_commands.rs  hooks.rs  index.rs  info_commands.rs  install.rs  main.rs  search_commands.rs  viz_commands.rs
crates/infigraph-confluence/: Cargo.toml
crates/infigraph-confluence/src/: client.rs  lib.rs  sync.rs  template.rs
crates/infigraph-confluence/tests/: template_crawl.rs
crates/infigraph-core/: Cargo.toml
crates/infigraph-core/src/: lib.rs  sequence.rs
crates/infigraph-core/src/analysis/: mod.rs
crates/infigraph-core/src/bench/: mod.rs
crates/infigraph-core/src/check/: mod.rs
crates/infigraph-core/src/cluster/: mod.rs
crates/infigraph-core/src/concerns/: mod.rs
crates/infigraph-core/src/config/: mod.rs
crates/infigraph-core/src/embed/: mod.rs
crates/infigraph-core/src/export/: mod.rs
crates/infigraph-core/src/extract/: entities.rs  mod.rs  relations.rs
crates/infigraph-core/src/graph/: backend.rs  cozo_store.rs  kuzu_backend.rs  mod.rs  neo4j_backend.rs  queries.rs  schema.rs  session_store.rs  store.rs  store_bulk.rs  store_parquet.rs  store_util.rs  store_write.rs  test_templates.rs
crates/infigraph-core/src/manifest/: mod.rs
crates/infigraph-core/src/meta/: postgres_store.rs
crates/infigraph-core/src/model/: mod.rs
crates/infigraph-core/src/multi/: bridge.rs  cross_service.rs  grpc.rs  mod.rs
crates/infigraph-core/src/patterns/: mod.rs
crates/infigraph-core/src/refactor/: mod.rs
crates/infigraph-core/src/reflection/: mod.rs
crates/infigraph-core/src/resolve/: mod.rs
crates/infigraph-core/src/review/: llm.rs  mod.rs
crates/infigraph-core/src/routes/: mod.rs
crates/infigraph-core/src/structured/: cozo.rs  ingest.rs  mod.rs  schema.rs
crates/infigraph-core/src/taint/: dynamic_urls.rs  interprocedural.rs  mod.rs  path_traversal.rs
crates/infigraph-core/src/viz/: mod.rs
crates/infigraph-core/src/watch/: mod.rs
crates/infigraph-core/tests/: check_integration.rs  combined_graph.rs  cozo_skeleton.rs  extract_pipeline.rs  f16_quality.rs  facade_session_lang.rs  features.rs  graph_queries.rs  index_perf.rs  kuzu_backend.rs  model_learned_batch.rs  modules.rs  namespace_prefix.rs  neo4j_backend.rs  postgres_registry.rs  remote_embeddings.rs  resolve_calls.rs  schema_parity.rs  search_hybrid.rs  search_routes_security.rs  session_store.rs  write_lock.rs
crates/infigraph-docs/: Cargo.toml
crates/infigraph-docs/src/: chunk.rs  embed.rs  extract.rs  lib.rs  links.rs  search.rs  store.rs  watch.rs
crates/infigraph-docs/tests/: combined_docs.rs  modules.rs  pipeline_core.rs  pipeline_kg.rs  pipeline_store_gaps.rs  remote_doc_embeddings.rs  tpsbridge_index.rs
crates/infigraph-grammar-plugin/: Cargo.toml
crates/infigraph-grammar-plugin/src/: lib.rs  plugin.rs
crates/infigraph-languages/: Cargo.toml
crates/infigraph-languages/languages/clojure/: relations.scm
crates/infigraph-languages/languages/cpp/: relations.scm
crates/infigraph-languages/languages/csharp/: relations.scm
crates/infigraph-languages/languages/cuda/: relations.scm
crates/infigraph-languages/languages/dart/: relations.scm
crates/infigraph-languages/languages/elixir/: relations.scm
crates/infigraph-languages/languages/elm/: relations.scm
crates/infigraph-languages/languages/fsharp/: relations.scm
crates/infigraph-languages/languages/go/: relations.scm
crates/infigraph-languages/languages/groovy/: relations.scm
crates/infigraph-languages/languages/java/: relations.scm
crates/infigraph-languages/languages/javascript/: relations.scm
crates/infigraph-languages/languages/kotlin/: relations.scm
crates/infigraph-languages/languages/lua/: relations.scm
crates/infigraph-languages/languages/pascal/: relations.scm
crates/infigraph-languages/languages/php/: relations.scm
crates/infigraph-languages/languages/python/: entities.scm  lang.toml  relations.scm
crates/infigraph-languages/languages/ruby/: relations.scm
crates/infigraph-languages/languages/rust/: relations.scm
crates/infigraph-languages/languages/scala/: relations.scm
crates/infigraph-languages/languages/svelte/: relations.scm
crates/infigraph-languages/languages/swift/: relations.scm
crates/infigraph-languages/languages/tsx/: relations.scm
crates/infigraph-languages/languages/typescript/: relations.scm
crates/infigraph-languages/languages/zig/: relations.scm
crates/infigraph-languages/src/: lib.rs
crates/infigraph-languages/tests/: facade_integration.rs  registry_integration.rs
crates/infigraph-mcp/: Cargo.toml
crates/infigraph-mcp/src/: compress.rs  lib.rs  main.rs  session_context.rs
crates/infigraph-mcp/src/tools/: docs.rs  graph.rs  groups.rs  helpers.rs  index.rs  memory_context.rs  mod.rs  search.rs  session.rs  watch.rs
crates/infigraph-mcp/src/tools/analysis/: call_graph.rs  clones.rs  concerns.rs  config.rs  diagrams.rs  git.rs  mod.rs  reflection.rs  security.rs  structured.rs  taint.rs
crates/infigraph-mcp/src/web/: handlers_analysis.rs  handlers_git.rs  handlers_symbol.rs  mod.rs
crates/infigraph-mcp/tests/: groups_watch_perf.rs  helpers_gaps.rs  memory_context.rs  parent_dir_search.rs  tool_dispatch.rs  watcher_concurrency.rs  watcher_reindex.rs
crates/infigraph-pipeline-plugin/: Cargo.toml
crates/lsp-to-scip/: Cargo.toml
crates/lsp-to-scip/src/: lsp_types.rs  main.rs
docs/: BRANDING.md  CODE-PARSING.md  DESIGN-language-agnostic-cross-repo-linking.md  DESIGN-org-wide-knowledge-graph.md  Gemfile  PIPELINE_PLUGINS.md  PLAN-context-compression.md  PLAN-webhook-reindex.md  README.md  RECIPE-e2e-team-setup.md  REMOTE-MULTI-REPO.md  WEBHOOK-REINDEX.md  _config.yml  custom-grammar-plugins.md  index.md
driver/: build.sh
npm/: install.js
scripts/: setup-docs.sh
(+15 files in other folders)
