[workspace]
members = [
    "crates/infigraph-core",
    "crates/infigraph-languages",

    "crates/infigraph-grammar-plugin",
    "crates/infigraph-cli",
    "crates/infigraph-mcp",
    "crates/lsp-to-scip",
]
resolver = "2"

[workspace.package]
version = "0.15.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/intuit/infigraph"

[workspace.dependencies]
infigraph-core = { path = "crates/infigraph-core" }
infigraph-languages = { path = "crates/infigraph-languages" }
tree-sitter = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"

# lbug (Kuzu graph DB) produces a static library that exceeds the 4 GB PE32
# limit on Windows when compiled in debug mode (LNK1248).
[profile.dev.package.lbug]
opt-level = 2
