[workspace]
members = [
    "crates/infigraph-core",
    "crates/infigraph-languages",
    "crates/infigraph-docs",
    "crates/infigraph-confluence",

    "crates/infigraph-grammar-plugin",
    "crates/infigraph-pipeline-plugin",
    "crates/infigraph-cli",
    "crates/infigraph-mcp",
    "crates/lsp-to-scip",
    "crates/tree-sitter-vb6",
]
resolver = "2"

[workspace.package]
version = "1.5.2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/intuit/infigraph"
homepage = "https://intuit.github.io/infigraph/"
documentation = "https://intuit.github.io/infigraph/"
keywords = ["code-intelligence", "graph", "mcp", "ast", "search"]
categories = ["development-tools"]
readme = "README.md"

[workspace.dependencies]
infigraph-core = { path = "crates/infigraph-core", version = "1.5.2" }
infigraph-languages = { path = "crates/infigraph-languages", version = "1.5.2" }
tree-sitter = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"

# lbug (Kuzu graph DB) produces a static library that exceeds the 4 GB PE32
# limit on Windows when compiled in debug mode (LNK1248).
[profile.dev.package.lbug]
opt-level = 2

# esaxx-rs hardcodes static_crt(true) (/MT) which conflicts with lbug's /MD
# (dynamic CRT) on Windows MSVC, causing LNK2038 linker errors.
[patch.crates-io]
esaxx-rs = { path = "patches/esaxx-rs" }
