[package]
name = "infigraph-confluence"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Confluence ingestion for Infigraph — fetch, parse, and index Confluence pages into the document graph"

[dependencies]
infigraph-docs = { path = "../infigraph-docs" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
sha2 = "0.10"
chrono = "0.4"
ureq = { version = "2", features = ["json"] }
regex = "1"
