[package]
name = "infigraph-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["ast", "code-analysis", "graph-database", "tree-sitter", "code-intelligence"]
categories = ["development-tools", "parser-implementations"]
readme.workspace = true
description = "AST-powered code analysis framework — parser, graph, diff, and analysis engine"

[dependencies]
tree-sitter.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
# lbug is a maintained fork of Kuzu (columnar embedded graph DB), published to crates.io.
# Aliased as `kuzu` to match the upstream Kuzu API surface used throughout the codebase.
kuzu = { package = "lbug", version = "= 0.16.0" }
cozo = { version = "0.7.6", features = ["storage-sqlite"] }
rayon = "1"
sha2 = "0.10"
toml = "0.8"
glob = "0.3"
regex = "1"
dirs-next = "2"
model2vec-rs = { version = "0.1", default-features = false, features = ["onig"] }
scip = "0.7.1"
protobuf = "3"
tempfile = "3"
# macos_kqueue enables the kqueue backend on macOS; notify selects inotify on Linux automatically.
notify = "6"
ureq = "2"
usearch = "2.18"
parquet = "58.3"
arrow = { version = "58.3", features = ["prettyprint"] }
ignore = "0.4"
serde_yaml = "0.9.34"
fs2 = "0.4.3"
memmap2 = "0.9"

[dev-dependencies]
tree-sitter-python = "0.25"
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
