[package]
name = "infigraph-docs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Document indexing and search for Infigraph — PDF, DOCX, PPTX, XLSX, Markdown, and plain text"

[dependencies]
infigraph-core = { path = "../infigraph-core" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
rayon = "1"
sha2 = "0.10"
regex = "1"
kuzu = { package = "lbug", version = "0.16" }
parquet = "58.3"
arrow = { version = "58.3", features = ["prettyprint"] }
tempfile = "3"
pdf_oxide = "0.3"
calamine = "0.35"
zip = "2"
quick-xml = "0.37"
notify = { version = "6", features = ["macos_kqueue"] }
chrono = "0.4.45"
