[package]
name = "infigraph-languages"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bundled language packs for infigraph (Tree-sitter grammars + extraction queries)"

[dependencies]
infigraph-core.workspace = true
tree-sitter.workspace = true
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-swift = "0.7"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-c-sharp = "0.23"
tree-sitter-scala = "0.26"
tree-sitter-lua = "0.5"
tree-sitter-zig = "1.1"
tree-sitter-elixir = "0.3"
tree-sitter-dart = "0.2"
tree-sitter-objc = "3.0"
tree-sitter-haskell = "0.23"
tree-sitter-perl = "1.1"
tree-sitter-r = "1.2"
tree-sitter-ocaml = "0.24"
tree-sitter-bash = "0.25"
tree-sitter-sequel = "0.3"
tree-sitter-julia = "0.23"
tree-sitter-proto = "0.4"
anyhow.workspace = true
tree-sitter-powershell = "0.26"
tree-sitter-verilog = "1.0"
tree-sitter-hcl = "1.1"
tree-sitter-toml-ng = "0.7"
tree-sitter-yaml = "0.7"
tree-sitter-erlang = "0.16"
tree-sitter-containerfile = "0.8"
tree-sitter-fortran = "0.6"
tree-sitter-nix = "0.3"
tree-sitter-svelte-ng = "1.0"
tree-sitter-fsharp = "0.3"
tree-sitter-css = "0.25"
tree-sitter-html = "0.23"
tree-sitter-json = "0.24"
tree-sitter-xml = "0.7"
tree-sitter-make = "1.1"
tree-sitter-cmake = "0.7"
tree-sitter-glsl = "0.2"
tree-sitter-commonlisp = "0.4"
tree-sitter-elm = "5.9"
tree-sitter-elisp = "1.6"
tree-sitter-ini = "1.4"
tree-sitter-groovy = "0.1"
tree-sitter-graphql = "0.1"
tree-sitter-starlark = "1.3"
tree-sitter-matlab = "1.3"
tree-sitter-md = "0.5"
tree-sitter-clojure-orchard = "0.2"
tree-sitter-cuda = "0.21"
tree-sitter-pascal = "0.10.2"
tree-sitter-vb6 = { git = "https://github.com/andersonm3ai/tree-sitter-vb6", rev = "cfe941a25a2589cbfdcda35956857eeb4d0bf3e9" }

[dev-dependencies]
tempfile = "3"
