[package]
name = "infigraph-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server for infigraph — exposes code graph tools to AI agents"

[[bin]]
name = "infigraph-mcp"
path = "src/main.rs"

[dependencies]
infigraph-core.workspace = true
infigraph-languages = { path = "../infigraph-languages" }
infigraph-docs = { path = "../infigraph-docs" }
infigraph-confluence = { path = "../infigraph-confluence" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
rayon = "1"
tiny_http = "0.12"
sha2 = "0.10"

[lib]
name = "infigraph_mcp"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3"
