[package]
name = "infigraph-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["mcp", "ai-tools", "code-intelligence", "language-server", "llm"]
categories = ["development-tools"]
readme.workspace = true
description = "MCP server for infigraph — exposes code graph tools to AI agents"

[[bin]]
name = "infigraph-mcp"
path = "src/main.rs"

[dependencies]
infigraph-core.workspace = true
infigraph-languages = { path = "../infigraph-languages", version = "2.1.0" }
infigraph-docs = { path = "../infigraph-docs", version = "2.1.0" }
infigraph-confluence = { path = "../infigraph-confluence", version = "2.1.0" }
infigraph-pipeline-plugin = { path = "../infigraph-pipeline-plugin", version = "2.1.0" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
rayon = "1"
tiny_http = "0.12"
sha2 = "0.10"
fs2 = "0.4"

[lib]
name = "infigraph_mcp"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3"
