[package]
name = "infigraph-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["mcp", "ai-tools", "code-intelligence", "language-server", "llm"]
categories = ["development-tools"]
readme.workspace = true
description = "MCP server for infigraph — exposes code graph tools to AI agents"

[[bin]]
name = "infigraph-mcp"
path = "src/main.rs"

[dependencies]
infigraph-core.workspace = true
infigraph-languages = { path = "../infigraph-languages" }
infigraph-docs = { path = "../infigraph-docs" }
infigraph-confluence = { path = "../infigraph-confluence" }
infigraph-pipeline-plugin = { path = "../infigraph-pipeline-plugin" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
rayon = "1"
tiny_http = "0.12"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
fs2 = "0.4"
toml = "0.8"
ort = { version = "2.0.0-rc.12", features = ["download-binaries"], optional = true }
ndarray = { version = "0.16", optional = true }
tokenizers = { version = "0.21", default-features = false, features = ["onig"], optional = true }

[features]
default = ["kompress"]
kompress = ["dep:ort", "dep:ndarray", "dep:tokenizers"]

[lib]
name = "infigraph_mcp"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3"
